--- a/appproject/accounts/templates/accounts/s_login.html
+++ b/appproject/accounts/templates/accounts/s_login.html
@@ -22,8 +22,8 @@
                         <input type="password" name="password" id="id_password" required>
                     </div>
                     <div class="links">
-                        <a href="{% url 'password_reset' %}" class="muted">パスワードを忘れた場合</a>
-                        <a href="{% url 'student_signup' %}" class="muted">アカウント新規作成リンク</a>
+                        <a href="{% url 'accounts:password_reset' %}" class="muted">パスワードを忘れた場合</a>
+                        <a href="{% url 'accounts:student_signup' %}" class="muted">アカウント新規作成リンク</a>
                     </div>
                     <button type="submit" class="btn-login">ログイン</button>
                 </form>
