--- a/appproject/accounts/templates/accounts/karihome.html
+++ b/appproject/accounts/templates/accounts/karihome.html
@@ -4,8 +4,9 @@
     <ul>
       <li><a href="#">システムタブ</a></li>
       <li><a href="#">アルゴリズムタブ</a></li>
-      <li><a href="#">チェックリストタブ</a></li>
-      <li><a href="{% url 'account_entry' %}">アカウント</a></li>
+      <li><a href="{% url 'codemon:checklist_selection' %}">チェックリストタブ</a></li>
+      <li><a href="{% url 'accounts:account_entry' %}">アカウント</a>
+</li>
     </ul>
   </nav>
 </header>
