--- a/appproject/accounts/templates/accounts/t_signup.html
+++ b/appproject/accounts/templates/accounts/t_signup.html
@@ -81,7 +81,7 @@
                     <button type="submit" class="big-btn">新しく作る</button>
                 </div>
             </form>
-            <div style="text-align:center;margin-top:12px"><a href="{% url 'teacher_login' %}">ログインページへ</a></div>
+            <div style="text-align:center;margin-top:12px"><a href="{% url 'accounts:teacher_login' %}">ログインページへ</a></div>
         </section>
     </div>
 </body>
