--- a/appproject/codemon/templates/codemon/checklist_delete_confirm.html
+++ b/appproject/codemon/templates/codemon/checklist_delete_confirm.html
@@ -5,7 +5,7 @@
   <a href="{% url 'codemon:systems_list' %}" class="tab">システム</a>
   <a href="{% url 'codemon:algorithms_list' %}" class="tab">アルゴリズム</a>
   <a href="{% url 'codemon:checklist_selection' %}" class="tab">チェックリスト</a>
-  <a href="{% url 'accounts:student_home' %}" class="tab" id="account-tab">アカウント</a>
+  <a href="{% url 'accounts:account_entry' %}" class="tab" id="account-tab">アカウント</a>
 </div>
 
 <div class="chat-ai-bubble">
