--- a/appproject/accounts/templates/accounts/s_account.html
+++ b/appproject/accounts/templates/accounts/s_account.html
@@ -33,7 +33,7 @@
     <div class="tabs">
       <div class="tab">システムタブ</div>
       <div class="tab">アルゴリズムタブ</div>
-      <div class="tab">進捗管理タブ</div>
+  <div class="tab"><a href="{% url 'accounts:karihome' %}">進捗管理タブ</a></div>
       <div class="tab"><a href="{% url 'accounts:account_entry' %}">アカウント</a></div>
     </div>
 
